argo-workflows-ci-example/bootstrap/final-application/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: demo.abu.pub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-application
            port:
              name: http
  tls:
  - hosts:
    - demo.abu.pub
    secretName: demo-abu-pub-tls
